class AreaCardView {

}
