import EventEmitter from 'external/EventEmitter';


export default class CardInFieldManager extends EventEmitter {
    constructor() {
        super();
    }
}
