import BaseCardView from './BaseCardView';


export default class CreatureCardView extends BaseCardView {
    constructor(x, y, data) {
        super(x, y, data);
    }

}

